implement case type snapshot support and add async snapshot creation listener